<resources>
    <string name="app_name">MarvelApp</string>
    <string name="detail_activity_description_title">Description :</string>
    <string name="detail_activity_comics_title">Présent dans les Comics :</string>
    <string name="detail_no_information">Aucun information disponible</string>
    <string name="image_description_character_image">character_image</string>
    <string name="image_description_arrow">image_description_arrow</string>
    <string name="marvel_bottom_text">Data provided by Marvel. © 2014 Marvel</string>
</resources>
