<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@color/background_primary_blue">

    <ImageView
        android:id="@+id/ivDetailImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/large_12dp"
        android:contentDescription="@string/image_description_character_image"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="75">
        <TextView
            android:id="@+id/tvDetailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/large_12dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xl"
            android:maxLines="1"
            android:ellipsize="end"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDetailTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/large_12dp"
            android:background="@color/background_third_taupe">
            <TextView
                android:id="@+id/tvDetailNoInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/detail_no_information"
                android:textColor="@color/background_primary_blue"
                android:textStyle="bold"
                android:visibility="gone"/>
            <RelativeLayout
                android:id="@+id/rlDetailDescriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true">
                <TextView
                    android:id="@+id/tvDetailDescriptionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:padding="@dimen/normal_8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/detail_activity_description_title"
                    android:textColor="@color/background_primary_blue"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvDetailDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvDetailDescriptionTitle"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/background_primary_blue"
                    android:padding="@dimen/large_12dp"/>
            </RelativeLayout>
            <View
                android:id="@+id/vDetailSeparator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_4dp"
                android:background="@color/background_primary_blue"
                android:layout_below="@+id/rlDetailDescriptionLayout"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/normal_8dp" />
            <RelativeLayout
                android:id="@+id/rlDetailComicsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vDetailSeparator"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/xl_20dp">

                <TextView
                    android:id="@+id/tvDetailComicsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:padding="@dimen/normal_8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/detail_activity_comics_title"
                    android:textColor="@color/background_primary_blue"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDetailRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvDetailComicsTitle"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/normal_8dp"
                    android:layout_marginEnd="@dimen/normal_8dp"/>
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>
    <TextView
        android:id="@+id/bottom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/marvel_bottom_text"
        android:layout_marginBottom="12dp"/>
</LinearLayout>